[gd_scene load_steps=34 format=3 uid="uid://dkplfc4s2mslk"]

[ext_resource type="PackedScene" uid="uid://diui5swt03bhu" path="res://Player/player.tscn" id="1_3o0o0"]
[ext_resource type="Script" path="res://Encounters/PoseidonEncounter/encounter_poseidon.gd" id="1_t7sp0"]
[ext_resource type="Texture2D" uid="uid://o8o5fjfvgidh" path="res://Encounters/PoseidonEncounter/Poseidon/Poseidon_2_scaled_up.png" id="3_qggth"]
[ext_resource type="Script" path="res://Encounters/PoseidonEncounter/poseidon.gd" id="3_spvk0"]
[ext_resource type="Script" path="res://Encounters/PoseidonEncounter/fog_shader.gd" id="4_dy2jo"]
[ext_resource type="Shader" path="res://Encounters/PoseidonEncounter/encounter_poseidon_fog.gdshader" id="5_et2rs"]
[ext_resource type="Texture2D" uid="uid://lisq7pcg13ck" path="res://Encounters/PoseidonEncounter/fog_shader_mask.png" id="6_2rbu2"]
[ext_resource type="PackedScene" uid="uid://n03c1hqo8bh1" path="res://Encounters/PoseidonEncounter/Poseidon/Attacks/Stab/poseidon_stab_attack.tscn" id="7_56rb6"]
[ext_resource type="Texture2D" uid="uid://dl8yem5hvdoh2" path="res://Player/ship.png" id="8_rfh22"]
[ext_resource type="Script" path="res://Encounters/PoseidonEncounter/fade_out_rect.gd" id="10_jcw7n"]
[ext_resource type="AudioStream" uid="uid://b8kuysrstc8t" path="res://Audio/SFX/PlayerHit.mp3" id="11_m2avu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aft7f"]
size = Vector2(500, 500)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_gjpws"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_bxt1p"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_drhbv"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_5ydr3"]
normal = Vector2(0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qoedg"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_1h0tk"]
offsets = PackedFloat32Array(0.0327869, 0.245902, 0.811475, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_i0p2f"]
gradient = SubResource("Gradient_1h0tk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6wejh"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(960, 540, 1)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 0.5
initial_velocity_max = 1.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_max = 5.0
color_ramp = SubResource("GradientTexture1D_i0p2f")
anim_offset_max = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s4guo"]
shader = ExtResource("5_et2rs")
shader_parameter/resolution = Vector2(1920, 1080)
shader_parameter/octave_count = 5
shader_parameter/opacity = 0.0
shader_parameter/amp_start = 0.3
shader_parameter/amp_coeff = 0.6
shader_parameter/freq_coeff = 2.0
shader_parameter/zoom = 3.0
shader_parameter/speed = 0.03
shader_parameter/base_color = Color(0, 0, 0, 1)
shader_parameter/p_color = Color(0.12, 0.09, 0.6, 1)
shader_parameter/q_color = Color(0.8, 0.25, 1, 1)
shader_parameter/f_color = Color(1, 1, 1, 1)
shader_parameter/brightness = 0.8
shader_parameter/contrast = 0.25
shader_parameter/maskImage = ExtResource("6_2rbu2")

[sub_resource type="Gradient" id="Gradient_qkbb0"]
offsets = PackedFloat32Array(0, 0.212766, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_cfwel"]
gradient = SubResource("Gradient_qkbb0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ki44o"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 15.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_cfwel")

[sub_resource type="Gradient" id="Gradient_xcoin"]
offsets = PackedFloat32Array(0, 0.571429, 1)
colors = PackedColorArray(0.996078, 1, 1, 0.866667, 1, 1, 0, 0.301961, 1, 1, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gyhoi"]
gradient = SubResource("Gradient_xcoin")
width = 8
height = 8
fill = 1
fill_from = Vector2(0.489474, 0.542105)

[sub_resource type="Gradient" id="Gradient_m2h0b"]
offsets = PackedFloat32Array(0, 0.148936, 0.840426, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h2gus"]
gradient = SubResource("Gradient_m2h0b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pyylq"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 20.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
radial_velocity_min = 4.99998
radial_velocity_max = 15.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_h2gus")

[sub_resource type="Gradient" id="Gradient_vexoh"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0.560784, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g7gkx"]
gradient = SubResource("Gradient_vexoh")
width = 2
height = 2

[sub_resource type="Gradient" id="Gradient_4biku"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 0.59, 0.866667)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r5nip"]
gradient = SubResource("Gradient_4biku")
width = 2
height = 2

[node name="EncounterPoseidon" type="Node2D"]
script = ExtResource("1_t7sp0")

[node name="PlayableBoundary" type="Area2D" parent="."]
position = Vector2(960, 700)

[node name="ColorRect" type="ColorRect" parent="PlayableBoundary"]
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
color = Color(0.4, 0, 0.580392, 1)

[node name="PlayableArea" type="CollisionShape2D" parent="PlayableBoundary"]
shape = SubResource("RectangleShape2D_aft7f")
disabled = true

[node name="DoNotEdit-RightBoundary" type="StaticBody2D" parent="PlayableBoundary"]
position = Vector2(250, 0)

[node name="RightBoundaryCollisionShape2D" type="CollisionShape2D" parent="PlayableBoundary/DoNotEdit-RightBoundary"]
shape = SubResource("WorldBoundaryShape2D_gjpws")

[node name="DoNotEdit-BottomBoundary" type="StaticBody2D" parent="PlayableBoundary"]
position = Vector2(0, 250)

[node name="BottomBoundaryCollisionShape2D" type="CollisionShape2D" parent="PlayableBoundary/DoNotEdit-BottomBoundary"]
shape = SubResource("WorldBoundaryShape2D_bxt1p")

[node name="DoNotEdit-LeftBoundary" type="StaticBody2D" parent="PlayableBoundary"]
position = Vector2(-250, 0)

[node name="LeftBoundaryCollisionShape2D" type="CollisionShape2D" parent="PlayableBoundary/DoNotEdit-LeftBoundary"]
shape = SubResource("WorldBoundaryShape2D_drhbv")

[node name="DoNotEdit-TopBoundary" type="StaticBody2D" parent="PlayableBoundary"]
position = Vector2(0, -250)

[node name="TopBoundaryCollisionShape2D" type="CollisionShape2D" parent="PlayableBoundary/DoNotEdit-TopBoundary"]
shape = SubResource("WorldBoundaryShape2D_5ydr3")

[node name="BlackBackground" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0430392, 0.0430392, 0.0430392, 1)

[node name="StarsParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_qoedg")
position = Vector2(960, 540)
amount = 100
process_material = SubResource("ParticleProcessMaterial_6wejh")
lifetime = 60.0
preprocess = 60.0
fixed_fps = 0
visibility_rect = Rect2(-960, -540, 1920, 1080)

[node name="Poseidon" type="Node2D" parent="."]
position = Vector2(951, 1056)
scale = Vector2(1.5, 1.5)
script = ExtResource("3_spvk0")

[node name="PoseidonSprite" type="Sprite2D" parent="Poseidon"]
texture_filter = 2
position = Vector2(0, -700)
texture = ExtResource("3_qggth")

[node name="FogShader" type="ColorRect" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_s4guo")
offset_top = -3.0
offset_right = 1920.0
offset_bottom = 1077.0
script = ExtResource("4_dy2jo")

[node name="FogShaderFadeInTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="UnknownShip" type="Sprite2D" parent="."]
position = Vector2(960, 350)
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_rfh22")

[node name="ExplosionParticles" type="GPUParticles2D" parent="UnknownShip"]
amount = 2
process_material = SubResource("ParticleProcessMaterial_ki44o")
texture = SubResource("GradientTexture2D_gyhoi")
lifetime = 0.2
fixed_fps = 0

[node name="OrangeSparkParticles" type="GPUParticles2D" parent="UnknownShip"]
amount = 6
process_material = SubResource("ParticleProcessMaterial_pyylq")
texture = SubResource("GradientTexture2D_g7gkx")
lifetime = 0.5
fixed_fps = 0

[node name="YellowSparkParticles" type="GPUParticles2D" parent="UnknownShip"]
amount = 6
process_material = SubResource("ParticleProcessMaterial_pyylq")
texture = SubResource("GradientTexture2D_r5nip")
lifetime = 0.5
fixed_fps = 0

[node name="UnknownShipMoveTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="PoseidonStabAttack" parent="." instance=ExtResource("7_56rb6")]
process_mode = 4
position = Vector2(934, 372)
rotation = 3.14159

[node name="UnknownShipGrabTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="UnknownShipGrabMoveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource("1_3o0o0")]
position = Vector2(960, 700)
motion_mode = 1

[node name="PlayerHitSFX" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2(-960, -700)
stream = ExtResource("11_m2avu")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Stage2AttackTimer" type="Timer" parent="."]
wait_time = 33.47
one_shot = true

[node name="EncounterTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FogAndAttackFadeOutTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="EncounterFadeOutTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AttackFadeOutTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PlayerMoveTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="UI" type="Control" parent="."]
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShieldBar" type="ColorRect" parent="UI"]
layout_mode = 0
offset_left = 1055.0
offset_top = 965.0
offset_right = 1195.0
offset_bottom = 1000.0
color = Color(0.227451, 0.74902, 0.121569, 1)

[node name="ShieldBarInner" type="ColorRect" parent="UI/ShieldBar"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 135.0
offset_bottom = 30.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="UI/ShieldBar/ShieldBarInner"]
layout_mode = 0
offset_right = 125.0
offset_bottom = 25.0
color = Color(0, 0, 0, 1)

[node name="ShieldBarMeter" type="ColorRect" parent="UI/ShieldBar"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 130.0
offset_bottom = 25.0
color = Color(0.8, 0.8, 0.8, 0.5)

[node name="FadeOutVictoryTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FadeOutPlayerKilledTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FadeOutRect" type="ColorRect" parent="."]
z_index = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)
script = ExtResource("10_jcw7n")

[connection signal="timeout" from="UnknownShipGrabTimer" to="." method="_on_unknown_ship_grab_timer_timeout"]
[connection signal="killed" from="Player" to="." method="_on_player_killed"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Stage2AttackTimer" to="." method="_on_stage_2_attack_timer_timeout"]
[connection signal="timeout" from="EncounterTimer" to="." method="_on_encounter_timer_timeout"]
[connection signal="timeout" from="FogAndAttackFadeOutTimer" to="." method="_on_fog_fade_out_timer_timeout"]
[connection signal="timeout" from="EncounterFadeOutTimer" to="." method="_on_encounter_fade_out_timer_timeout"]
[connection signal="timeout" from="EncounterFadeOutTimer" to="Poseidon" method="_on_encounter_fade_out_timer_timeout"]
[connection signal="timeout" from="PlayerMoveTimer" to="." method="_on_player_move_timer_timeout"]
[connection signal="timeout" from="FadeOutVictoryTimer" to="." method="_on_fade_out_victory_timer_timeout"]
[connection signal="timeout" from="FadeOutPlayerKilledTimer" to="." method="_on_fade_out_player_killed_timer_timeout"]
